Fri Oct 31 21:06:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to download new packages (11600).

Fri Oct 31 21:04:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/HOWTO: Updated and finished instructions.

Fri Oct 31 20:53:52 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/HOWTO,
	  external_posting_source/mypostingsource.h: Add nearly working
	  details of how to compile an external posting source.
	* utils/make_xappy_tarballs: Update version numbers.

Fri Oct 31 11:37:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/exact_index_terms.py: Add unittest which I forgot
	  to commit a while ago.

Fri Oct 31 11:27:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to new version of packages (11584).
	* xappy/searchconnection.py: Use the newly added
	  FixedWeightPostingSource to provide weights for
	  query_difference(), to fix regression introduced with the last
	  xapian packages (due to query_all() no longer returning non-zero
	  weights).  This is a more efficient implementation, anyway, since
	  the matcher will usually not need to check for documents
	  existing.

Thu Oct 30 21:20:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update xapian
	  tarballs with changes in xapian trunk to revision 11580.

Mon Oct 06 12:27:29 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/queries.rst,xappy/searchconnection.py: Add
	  query_difference() to product a query which ranks documents
	  according to how close to a particular value one of the fields
	  is.
	* xappy/unittests/distance.py: Add tests for query_difference.
	* AUTHORS: Mention that Paul did this.

Sun Sep 28 15:52:10 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to use new packages.
