@@ -1,3 +1,8 @@
+Tue Nov 18 21:45:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/distance.py: Add copyright header, and remove
+	  unneccessary import of xapian.
+
 Fri Oct 31 21:06:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Update to download new packages (11600).
